# BulletsManager

./: .gitignore
.github/workflows/: cmake-single-platform.yml
application/: CMakeLists.txt
application/includes/bm/: Configs.hpp  Engine.hpp  EngineSubSystem.hpp  Entity.hpp  Logger.hpp  MainLoop.hpp  RenderSubSystem.hpp  Renderer.hpp  VulkanInstance.hpp  VulkanLogicalDevice.hpp  VulkanPhysicalDevice.hpp  VulkanRenderer.hpp  VulkanWindowSurface.hpp  Window.hpp
application/sources/: Configs.cpp  Engine.cpp  EngineSubSystem.cpp  Logger.cpp  MainLoop.cpp  RenderSubSystem.cpp  Renderer.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanRenderer.cpp  VulkanWindowSurface.cpp  Window.cpp  Window.mm  main.cpp
cmake/: CMakeLists.txt
scripts/: build_project.py  generate_project.py
